--- a/models/order/_id.htm
+++ b/models/order/_id.htm
@@ -9,7 +9,7 @@
             data-stripe-load-indicator
             data-request="onEdit"
             data-request-data="id: <?= $record->id; ?>">
-        <?= e(trans('xeor.octocart::lang.orders.edit')) ?>
+        <?= e(trans('samubra.training::lang.orders.edit')) ?>
     </button>
     <button class="btn btn-xs btn-danger js-btn-action"
             style="display: none;"
@@ -17,7 +17,7 @@
             data-stripe-load-indicator
             data-request="onRemove"
             data-request-data="id: <?= $record->id; ?>"
-            data-request-confirm="<?= e(trans('xeor.octocart::lang.orders.confirm')) ?>">
-        <?= e(trans('xeor.octocart::lang.orders.delete')) ?>
+            data-request-confirm="<?= e(trans('samubra.training::lang.orders.confirm')) ?>">
+        <?= e(trans('samubra.training::lang.orders.delete')) ?>
     </button>
 </div>
