--- a/models/order/_id_field.htm
+++ b/models/order/_id_field.htm
@@ -1,4 +1,4 @@
-<h2><?= e(trans('xeor.octocart::lang.order.order')) ?>
+<h2><?= e(trans('samubra.training::lang.order.order')) ?>
     #<?= $value; ?>
-    <?= e(trans('xeor.octocart::lang.order.details')) ?>
+    <?= e(trans('samubra.training::lang.order.details')) ?>
 </h2>
