--- a/models/order/_status.htm
+++ b/models/order/_status.htm
@@ -1,1 +1,1 @@
-<mark class="order-status status-<?= $value; ?>"><span><?= Lang::get('xeor.octocart::lang.status.' . $value); ?></span></mark>
+<mark class="order-status status-<?= $value; ?>"><span><?= Lang::get('samubra.training::lang.status.' . $value); ?></span></mark>
